# syssys

./: Makefile  Makefile.am  README.html  README.md  README.txt  bootstrap.sh  configure.ac  syssys.spec.in
src/: Makefile  Makefile.am  syssys
src/etc/: Makefile  syssys.conf
src/sbin/: Makefile  syssys
