#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([syssys], [0.0.0], [Tommy.Reynolds@MegaCoder.com])

AC_CONFIG_SRCDIR([src])
# AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE

# Checks for programs.

AC_PROG_INSTALL

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([
	 Makefile
	 src/Makefile
])
AC_OUTPUT
